Add the SMachine doc
TODO:
- doc for SMachine

--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -602,6 +602,7 @@ We now descrive each plugin, its behavior and parameters.
 \input{Doc_NStart.tex}
 \input{Doc_PatConst.tex}
 \input{Doc_PepSignal.tex}
+\input{Doc_SMachine.tex}
 \input{Doc_SpliceWAM.tex}
 \input{Doc_SPred.tex}
 \input{Doc_StartWAM.tex}
@@ -623,8 +624,8 @@ We now descrive each plugin, its behavior and parameters.
 \input{Doc_User.tex}
 
 \subsection{\texttt{Others plugins}}
-\input{Doc_GFF.tex}
 \input{Doc_GCPlot.tex}
+\input{Doc_GFF.tex}
 \input{Doc_Plotter.tex}
 \input{Doc_Tester.tex}
 
