--- a/eugene/doc/Doc_Est.tex
+++ b/eugene/doc/Doc_Est.tex
@@ -61,6 +61,8 @@ Est.estM         6
 Est.utrP*        0.35
 Est.utrM         5
 Est.StrongDonor* 0.95
+Est.MinDangling  18
+Est.MaxIntron    15000
 Sensor.Est.use   TRUE     # Use EST sensor
 Sensor.Est       20       # Sensor priority: the highest one
 \end{Verbatim}
