--- a/eugene/doc/Doc_AnnotaStruct.tex
+++ b/eugene/doc/Doc_AnnotaStruct.tex
@@ -38,7 +38,7 @@ sites, insertions and deletions) and contents edges (exons, introns,
 UTR, UTR introns and intergenic regions) can be directly modified
 using this plugin.
 
-The sensor is activated by using the value TRUE for the parameter
+The sensor is activated by using the value 1 for the parameter
 \texttt{Sensor.AnnotaStruct.use} in the parameter file.
 
 Here is an example of AnnotaStruct parameters definition :
@@ -59,7 +59,7 @@ AnnotaStruct.TrStartType      p
 AnnotaStruct.TrStart*         1
 AnnotaStruct.TrStopType       p 
 AnnotaStruct.TrStop*          1
-Sensor.AnnotaStruct.use       TRUE      # Use AnnotaStruct sensor
+Sensor.AnnotaStruct.use       1         # Use AnnotaStruct sensor
 Sensor.AnnotaStruct           1         # Sensor priority
 \end{Verbatim}
 
