--- a/eugene/doc/Doc_GFF.tex
+++ b/eugene/doc/Doc_GFF.tex
@@ -15,12 +15,12 @@ name is derived from the sequence name by adding the \texttt{.gff}
 suffix.  The sensor is activated by either :
 \begin{itemize}
 \item the \texttt{-G} argument \index{CmdFlags}{[GFF activation] G}
-\item the value TRUE for the parameter \texttt{Sensor.GFF.use} in the
+\item the value 1 for the parameter \texttt{Sensor.GFF.use} in the
   parameter file.
 \end{itemize}
 Here is an example of GFF parameters definition :
 \begin{Verbatim}[fontsize=\small]
-Sensor.GFF.use  TRUE      # Use GFF sensor
+Sensor.GFF.use  1      # Use GFF sensor
 Sensor.GFF      1         # Sensor priority
 \end{Verbatim}
 
