--- a/eugene/doc/Doc_Homology.tex
+++ b/eugene/doc/Doc_Homology.tex
@@ -9,7 +9,7 @@ Todo.
 The sensor is activated by either :
 \begin{itemize}
 \item the \texttt{-t} argument \index{CmdFlags}{[Homology activation] t}
-\item the value TRUE for the parameter \texttt{Sensor.Homology.use} in the
+\item the value 1 for the parameter \texttt{Sensor.Homology.use} in the
   parameter file.
 \end{itemize}
 Here is an example of Homology parameters definition :
@@ -17,7 +17,7 @@ Here is an example of Homology parameters definition :
 Homology.TblastxP*      0
 Homology.TblastxB*      0.0595
 Homology.protmatname    BLOSUM80
-Sensor.Homology.use     TRUE      # Use Homology sensor
+Sensor.Homology.use     1      # Use Homology sensor
 Sensor.Homology         1         # Sensor priority
 \end{Verbatim}
 
