--- a/eugene/doc/Doc_IfElse.tex
+++ b/eugene/doc/Doc_IfElse.tex
@@ -21,7 +21,7 @@ Sensor if it predicts something or else the SPred sensor.
 \begin{Verbatim}[fontsize=\small]
 IfElse.SensorIf         NG2
 IfElse.SensorElse       SPred
-Sensor.IfElse.use       TRUE    # Use IfElse sensor
+Sensor.IfElse.use       1    # Use IfElse sensor
 Sensor.IfElse           1       # Sensor priority
 \end{Verbatim}
 
