--- a/eugene/doc/Doc_MarkovConst.tex
+++ b/eugene/doc/Doc_MarkovConst.tex
@@ -27,7 +27,7 @@ MarkovConst.UTR3*       0.999
 MarkovConst.Inter*      1.0
 MarkovConst.minGC[0]    0
 MarkovConst.maxGC[0]    100
-Sensor.MarkovConst.use  TRUE   # Use MarkovConst sensor
+Sensor.MarkovConst.use  1   # Use MarkovConst sensor
 Sensor.MarkovConst      1      # Sensor priority
 \end{Verbatim}
 
