--- a/eugene/doc/Doc_MarkovProt.tex
+++ b/eugene/doc/Doc_MarkovProt.tex
@@ -23,7 +23,7 @@ The sensor is activated by either:
 \begin{itemize}
 \item the \texttt{-M} argument followed by the filename of the set of models.
   \index{CmdFlags}{[MarkovProt Markov matrix file] M}
-\item the value TRUE for the parameter \texttt{[Sensor.MarkovProt.use} in
+\item the value 1 for the parameter \texttt{[Sensor.MarkovProt.use} in
   the parameter file.
 \end{itemize}
 
@@ -34,7 +34,7 @@ MarkovProt.minGC        0
 MarkovProt.maxGC        100
 MarkovProt.maxorder     2
 MarkovProt.order        2
-Sensor.MarkovProt.use   TRUE    # Use MarkovProt sensor
+Sensor.MarkovProt.use   1    # Use MarkovProt sensor
 Sensor.MarkovProt       1       # Sensor priority
 \end{Verbatim}
 
