--- a/eugene/doc/Doc_PatConst.tex
+++ b/eugene/doc/Doc_PatConst.tex
@@ -9,7 +9,7 @@ sequence. The corresponding uniform costs for using
 or rejecting a signal can be set using the
 \texttt{PatConst.patP*[i]}/ and \texttt{PatConst.patPNo*[i]} parameters.
 
-The sensor is activated by setting the value TRUE (one instance of the
+The sensor is activated by setting the value 1 (one instance of the
 plugin) or an integer (i instance) for the parameter
 \texttt{Sensor.PatConst.use} in the parameter file.
 
