--- a/eugene/doc/Doc_Plotter.tex
+++ b/eugene/doc/Doc_Plotter.tex
@@ -7,7 +7,7 @@
 The Plotter sensor allows to add to the graphical representation the GC\%,
 the GC3\% and the two quotients A/T+A and T/T+A.
 
-The sensor is activated by the value TRUE for the parameter
+The sensor is activated by the value 1 for the parameter
 \texttt{Sensor.Plotter.use} in the parameter file.
 
 Here is an example of Plotter parameters definition :
@@ -15,7 +15,7 @@ Here is an example of Plotter parameters definition :
 Plotter.GC          1         #
 Plotter.GC3         1         # 0 -> no plot  -  1 -> plot
 Plotter.A|T/A+T     1         #
-Sensor.Plotter.use  TRUE      # Use GFF sensor
+Sensor.Plotter.use  1      # Use GFF sensor
 Sensor.Plotter      1         # Sensor priority
 \end{Verbatim}
 
