--- a/eugene/doc/Doc_Riken.tex
+++ b/eugene/doc/Doc_Riken.tex
@@ -16,7 +16,7 @@ determined before hand.
 The sensor is activated by either :
 \begin{itemize}
 \item the \texttt{-R} argument \index{CmdFlags}{[Riken activation] R}
-\item the value TRUE for the parameter \texttt{Sensor.Riken.use} in the
+\item the value 1 for the parameter \texttt{Sensor.Riken.use} in the
   parameter file.
 \end{itemize}
 
@@ -35,7 +35,7 @@ Riken.Min_riken_length          120
 Riken.Min_riken_est_length      10
 Riken.StrandRespect             0
 Riken.RAFLPenalty*              -120
-Sensor.Riken.use                TRUE     # Use Riken sensor
+Sensor.Riken.use                1     # Use Riken sensor
 Sensor.Riken                    7        # Sensor priority
 \end{Verbatim}
 
