--- a/eugene/doc/Doc_SpliceWAM.tex
+++ b/eugene/doc/Doc_SpliceWAM.tex
@@ -18,7 +18,7 @@ the score of a motif is a function of the emission probabilities of
 this motif given a true positive model and a false positive model.
 
 The sensor is activated by setting the parameter
-\texttt{Sensor.SpliceWAM.use} to TRUE.  The user have to specify in
+\texttt{Sensor.SpliceWAM.use} to 1.  The user have to specify in
 the parameter file the base name (prefix) of the model files
 (\texttt{SpliceWAM.donmodelfilename} and
 \texttt{SpliceWAM.accmodelfilename}), the size of the context
@@ -42,7 +42,7 @@ SpliceWAM.NbNtBeforeAG          2
 SpliceWAM.NbNtAfterAG           3
 SpliceWAM.AccScaleCoef*         2.9004
 SpliceWAM.AccScalePenalty*      -7.5877
-Sensor.SpliceWAM.use            TRUE               # Use SpliceWAM sensor
+Sensor.SpliceWAM.use            1               # Use SpliceWAM sensor
 Sensor.SpliceWAM                1                  # Sensor priority
 \end{Verbatim}
 
