--- a/eugene/doc/Doc_User.tex
+++ b/eugene/doc/Doc_User.tex
@@ -19,12 +19,12 @@ here because it may directly set signal weights to a specific value
 The sensor is activated by either :
 \begin{itemize}
 \item the \texttt{-U} argument \index{CmdFlags}{[User activation] U}
-\item the value TRUE for the parameter \texttt{Sensor.User.use} in the
+\item the value 1 for the parameter \texttt{Sensor.User.use} in the
   parameter file.
 \end{itemize}
 Here is an example of User parameters definition :
 \begin{Verbatim}[fontsize=\small]
-Sensor.User.use  TRUE      # Use User sensor
+Sensor.User.use  1      # Use User sensor
 Sensor.User      10        # Sensor priority
 \end{Verbatim}
 
