--- a/eugene/doc/Doc_BlastX.tex
+++ b/eugene/doc/Doc_BlastX.tex
@@ -22,7 +22,7 @@ activated by either:
   that allows to specify the labels to consider, for example
   \texttt{-b092} to use the levels 0, 9, 2 (files \texttt{.blast0,
     .blast9, .blast2}),
-\item the value TRUE for the parameter \texttt{Sensor.BlastX.use} in
+\item the value 1 for the parameter \texttt{Sensor.BlastX.use} in
   the parameter file and the labels to consider in the
   \texttt{.BlastX.levels} parameter.
 \end{itemize}
@@ -32,20 +32,20 @@ minimum length of an intron is defined in the \texttt{BlastX.minIn}
 parameter.  A number of amino acids defined in the
 \texttt{BlastX.blastxM*} parameter that allows to define if 2
 similarities are near (see the paragraph Integration of information).
-Finally the \texttt{BlastX.postProcess} parameter (when set to TRUE)
+Finally the \texttt{BlastX.postProcess} parameter (when set to 1)
 allows to request to analyse how BlastX information are integrated in
 the final prediction.
 
 Here is an example of BlastX parameters definition.
 \begin{Verbatim}[fontsize=\small]
-BlastX.postProcess TRUE     # analyse prediction accorded to BlastX information
+BlastX.postProcess 1     # analyse prediction accorded to BlastX information
 BlastX.levels      012      # use levels 0, 1, and 2
 BlastX.level0*     0.2      # confidence in the level 0
 BlastX.level1*     0.0      # confidence in the level 1
 BlastX.level2*     0.0      # confidence in the level 2
 BlastX.blastxM*    10       # nb of amino acids implicated in intron incitation
 BlastX.minIn       50       # minimum length of intron
-Sensor.BlastX.use  TRUE     # Use BlastX sensor
+Sensor.BlastX.use  1     # Use BlastX sensor
 Sensor.BlastX      1        # Sensor priority
 \end{Verbatim}
 
@@ -187,7 +187,7 @@ a penalty equal to $-|s_i .c_i|$.
 The correspondance between BlastX information and prediction is
 analyzed if the \texttt{-B} flasg \index{CmdFlags}{[BlastX
   postprocessing activation] B} is provided or if the
-\texttt{BlastX.PostProcess} parameter is set to \texttt{TRUE}.
+\texttt{BlastX.PostProcess} parameter is set to \texttt{1}.
 
 For each predicted CDS, from the start codon to the stop, the
 percentage of nucleotides supported by a proteic similarity is
