--- a/eugene/doc/Doc_GCPlot.tex
+++ b/eugene/doc/Doc_GCPlot.tex
@@ -7,7 +7,7 @@
 The GCPlot sensor allows to add to the graphical representation a plot
 of basic composition statistics on the sequence. The sensor is
 activated by setting the parameter \texttt{Sensor.GCPlot.use} to
-\texttt{TRUE} in the parameter file. The composition statistics
+\texttt{1} in the parameter file. The composition statistics
 represented can be arbitrarily chosen. For example, the
 GC\%=$\frac{G+C}{A+T+G+C}$ is selected by setting \texttt{GCPlot.Up}
 to \texttt{GC} and \texttt{GCPlot.Over} to \texttt{ATGC}. Statistics
@@ -26,7 +26,7 @@ GCPlot.Smooth      98
 GCPlot.Color       5     # light green
 GCPlot.Zoom        2.0
 GCPlot.Zoom3       1.0
-Sensor.GCPlot.use  TRUE  # use GCPlot sensor
+Sensor.GCPlot.use  1  # use GCPlot sensor
 Sensor.GCPlot      1     # sensor priority
 \end{Verbatim}
 
