--- a/eugene/doc/Doc_NG2.tex
+++ b/eugene/doc/Doc_NG2.tex
@@ -10,7 +10,7 @@ program from two files whose names are derived from the sequence name
 by adding the \texttt{.splices} and \texttt{.splicesR} suffixes
 (respectively prediction for the forward and reverse strand).
 
-The sensor is activated by setting the value TRUE for the parameter
+The sensor is activated by setting the value 1 for the parameter
 \texttt{Sensor.NG2.use} in the parameter file. The score for acceptor
 and donor prediction is rescaled by the parameters {\tt NG2.accP*} and
 {\tt NG2.accB*} for acceptors and {\tt NG2.donP*} and {\tt NG2.donB*} for
@@ -22,7 +22,7 @@ NG2.accP*        0.903
 NG2.accB*        5.585
 NG2.donP*        0.980
 NG2.donB*        27.670
-Sensor.NG2.use   TRUE
+Sensor.NG2.use   1
 Sensor.NG2       1      # Sensor priority
 \end{Verbatim}
 
