--- a/eugene/doc/Doc_NStart.tex
+++ b/eugene/doc/Doc_NStart.tex
@@ -10,7 +10,7 @@ program from two files whose names are derived from the sequence name
 by adding the \texttt{.starts} and \texttt{.startsR} suffixes
 (respectively prediction for the forward and reverse strand).
 
-The sensor is activated by setting the value \texttt{TRUE} for the parameter
+The sensor is activated by setting the value \texttt{1} for the parameter
 \texttt{Sensor.NStart.use} in the parameter file. The score for acceptor
 and donor prediction is rescaled by the parameters {\tt NStart.startP*} and
 {\tt NStart.startB*} (see below).
@@ -19,7 +19,7 @@ Here is an example of NetStart parameters definition.
 \begin{Verbatim}[fontsize=\small]
 NStart.startP*     0.052
 NStart.startB*     0.308
-Sensor.NStart.use  TRUE    # Use NStart sensor
+Sensor.NStart.use  1    # Use NStart sensor
 Sensor.NStart      1       # Sensor priority
 \end{Verbatim}
 
