Update doc (add Jerome name, typo correction) Fill doc of PepSignal and SMachine.

--- a/eugene/doc/Doc.tex
+++ b/eugene/doc/Doc.tex
@@ -18,7 +18,7 @@
 %\newcommand{\shrink}[1]{}   % hide text
 \newcommand{\shrink}[1]{#1} % no effect
 
-\author{Philipe Bardou, Marie-Jos\'ee Cros, Sylvain Foissac, Annick Moisan,Thomas Schiex \\ Applied Mathematics and Computer Science Dept.\\ INRA Toulouse, France}
+\author{Philipe Bardou, Marie-Jos\'ee Cros, Sylvain Foissac, J\'erome Gouzy, Annick Moisan,Thomas Schiex \\ Applied Mathematics and Computer Science Dept.\\ INRA Toulouse, France}
 
 \def\abstractname{Overview}
 \setcounter{tocdepth}{3}
