--- a/eugene/doc/Doc_NG2.tex
+++ b/eugene/doc/Doc_NG2.tex
@@ -28,7 +28,7 @@ Sensor.NG2       1      # Sensor priority
 
 \paragraph{Input files format}
 
-The files with \texttt{.splices} and \texttt{.splicesR} suffix are
+The files with \texttt{.splices} and \texttt{.splicesR} suffixes are
 obtained by running NetGene2 which can be obtained at
 \texttt{http://www.cbs.dtu.dk/services/NetGene2/} and using the
 detailed output of the software.
