--- a/eugene/doc/Doc_Est.tex
+++ b/eugene/doc/Doc_Est.tex
@@ -76,7 +76,7 @@ Sensor.Est       20       # Sensor priority: the highest one
 
 \paragraph{Input files format}
 
-The input is obtained in a \texttt{,est} file with 8 fileds of information
+The input is obtained in a \texttt{.est} file with 8 fields of information
 per ligne:
 
 \texttt{<$b^S$> <$e^S$> <$s^S$> <$x$> <$b^S$> <est name> <$bq^S$> <$eq^S$>}
